feat(seo): implementação de infraestrutura SEO/GEO avançada com JSON-LD dinâmico e metadados OpenGraph para produtos e blog

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Caramel&family=Cinzel:wght@400;500;600;700&family=Cookie&family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
-  <title>Lojinhas das Graças - Artigos Religiosos</title>
+  <meta name="description"
+    content="Lojinha das Graças - A maior e mais completa loja de artigos religiosos, terços, imagens e presentes de fé." />
+  <title>Lojinha das Graças - Artigos Religiosos e Presentes de Fé</title>
 </head>
 
 <body>
